Added stream practise